# slack-conversation-logger

./: Cargo.toml  LICENSE  README.md  load-slack-env.sh  setup-slack-env.sh  slack-config.example.json
src/: logger.rs  main.rs  slack.rs
