[package]
name = "slack-conversation-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "io-std"] }
slack-morphism = { version = "2.14.0", features = ["hyper"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "9ca20c69b27e531a5eadfd4b5654592ab93e2b11", features = ["transport-io"] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "9ca20c69b27e531a5eadfd4b5654592ab93e2b11" }
schemars = "0.8" # rust-sdk requires version 0.8
async-trait = "0.1.88"
once_cell = "1.19"
chrono = "0.4"

# Required by slack-morphism for HTTP client connectivity
# These are used in the type definition of SlackClientHyperConnector
hyper = "1.0"
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["client-legacy"] }
